Fixes in controllers, DTOs, and repositories. Introduced a new DTO class and implemented player statistics update functionality. Added a team form based on the last 5 matches.